--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<div id="download">
 			<a href="slide.js" class="download download_track">Download</a>
 			<p>Version 1.2.0<br>更新时间 2012-01-05</p>
-			<p>你可以为Slide贡献代码：<a href="http://github.com/nathansearles/slides/" target="_blank" class="contribute">Contribute on GitHub</a></p>
+			<p>你可以为Slide贡献代码：<a href="http://github.com/jayli/yuislide/" target="_blank" class="contribute">Contribute on GitHub</a></p>
 			<p>关于Slide的任何想法都可以通过这里提交：<a href="http://github.com/jayli/yuislide/issues" target="_blank">Open a ticket on GitHub.</a></p>
 			<p>Author：<a href="http://jayli.github.com" target="_blank">拔赤</a>/<a href="http://www.cnblogs.com/cheche" target="_blank">灵玉</a>/<a href="http://weibo.com/ningzbruc" target="_blank">虎牙</a></p>
 			<p><a href="http://ued.taobao.com" target="_blank">Taobao UED</a></p>
