--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<img src="assets/example-frame.png" width="739" height="341" alt="Example Frame" id="frame">
 		</div>
 		<script>
-		//jayli
+		// 示例代码
 		YUI({
 			modules:{
 				'slide':{
@@ -102,7 +102,7 @@
 			<h1>YUI Slide</h1>
 			<!--h2>一个基于YUI3的Slide插件</h2-->
 			<p>
-				这是一个集选项卡切换和幻灯切换功能于一体的小插件，基于YUI3实现，兼容移动终端（iphone/ipad/android），Slide插件配置简单、使用方便，具有良好的可定制性，目前已经运行于<a href="http://www.taobao.com" target="_blank">淘宝网</a>的很多角落。
+				这是一个集选项卡切换和幻灯切换功能于一体的小插件，基于YUI3实现，针对移动终端（iphone/ipad/android）作了优化，动画流畅，并支持触屏事件，Slide插件配置简单、使用方便，具有良好的可定制性，目前已经运行于<a href="http://www.taobao.com" target="_blank">淘宝网</a>的很多角落。
 			</p>
 			<p>
 				这个插件最初源自<a href="http://cubee.github.com/doc" target="_blank">Cubee项目</a>，这个项目是<a href="http://weibo.com/tbbjued" target="_blank">淘宝北京UED团队</a>发起的，基于YUI3开发了许多好用的插件，Slide是比较有代表性的一个，如果你发现插件的bug，可以直接在<a href="http://github.com/jayli/yuislide" target="_blank">github</a>上提交，我们会尽快修复。
