--- a/index.html
+++ b/index.html
@@ -344,6 +344,24 @@ new Y.Slide('J_tab',{
 				<!--}}-->
 				<!--{{-->
 				<div class="expand">
+					<h4>adaptive_height (boolean)</h4>
+					<p>当控件尺寸高度变化时，是否修Slide控件的tab尺寸以保证子容器尺寸正确，默认为false</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
+					<h4>adaptive_width (boolean)</h4>
+					<p>当控件尺寸宽度变化时，是否修Slide控件的tab尺寸以保证子容器尺寸正确，默认为false</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
+					<h4>adaptive_size (boolean)</h4>
+					<p>当控件尺寸高度和宽度变化时，是否修Slide控件的tab尺寸以保证子容器尺寸正确，默认为false</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
 					<h4>reverse (boolean)</h4>
 					<p>"播放下一个"和"播放上一个"对调，默认为false</p>
 				</div>
