--- a/slide.html
+++ b/slide.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="zh">
-
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="Keywords" content="简单的XHTML页面" />
-	<meta name="Description" content="这是一个简单的XHTML页面" />
+	<meta charset="utf-8">
+	<meta name="description" content="Responsive design testing for the masses">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
 	<title>简单的XHTML页面</title>
 <link rel="stylesheet" type="text/css" href="http://a.tbcdn.cn/app/dp/css/global.css">
 <script type="text/javascript" src="http://a.tbcdn.cn/s/yui/3.4.1/build/yui/yui-min.js"></script>
@@ -46,6 +45,10 @@
 .t-slide-2 .tab-content {width:100%;height:400px;overflow:hidden;z-index:1;}
 .t-slide-2 .tab-content img {width:600px;height:400px;}
 
+.bb {
+	background:gray;
+}
+
 
 </style>
 <div id="J_tab_1" class="t-tabview my-hack">
@@ -56,18 +59,39 @@
   </ul>
   <div class="tab-content">
 	<div class="tab-pannel"><p>Tab One ContentTab One ContentTab One ContentTab One Content</p></div>
-    <div class="tab-pannel"><p>Tab Two ContentTab Two ContentTab Two ContentTab Two ContentTab Two Content</p></div>
-    <div class="tab-pannel"><p>Tab Three ContentTab Three ContentTab Three ContentTab Three Content</p></div>
+    <div class="tab-pannel hidden"><p>Tab Two ContentTab Two ContentTab Two ContentTab Two ContentTab Two Content</p></div>
+    <div class="tab-pannel hidden"><p>Tab Three ContentTab Three ContentTab Three ContentTab Three Content</p></div>
   </div>
 </div>
 
 
 <p></p>
-<p>可以将tab-nav值空</p>
+<script>
+YUI({
+	modules:{
+		'slide':{
+			fullpath:'slide.js',
+			requires:['node','anim']
+		}
+	}
+}).use('slide','dump',function(Y){
+	new Y.Slide('J_tab_1',{
+		autoSlide:false,
+		eventype:'click',
+		ease:'easeOut',
+		effect:'none',
+		autoSlide:true,
+		timeout:3000,
+		speed:0.5,
+		hoverStop:true
+	});
+});
+</script>
+<p class="bb">下边界位置</p>
 
 
 
-<div id="J_tab_3" class="t-slide-2 mt20">
+<div id="J_tab_3" class="t-slide-2 mt20" style="display:none">
   <ul class="tab-nav clearfix">
   </ul>
   <div class="tab-content">
@@ -83,66 +107,5 @@
 
 
 
-<!DOCTYPE html>
-       <style>
-	   /*
-        @-webkit-keyframes mycolor {
-            0% {
-                left: 0px;
-            }
-            100% {
-                left: 700px;
-            }
-        }
-        #J_tab_3 {
-			background:red;
-            -webkit-animation-name: mycolor;
-			-webkit-transition-duration: 1s;
-		  -webkit-transform: translate3d(400px,0,0);
-
-        }
-		*/
-        </style>
-    </head>
-        <div id="div">动画文字</div>
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
-<script>
-//runtime
-YUI({
-	modules:{
-		'slide':{
-			fullpath:'slide.js',
-			requires:['node','anim']
-		}
-	}
-}).use('slide','dump',function(Y){
-
-
-
-
-
-	new Y.Slide('J_tab_3',{
-		autoSlide:false,
-		eventype:'click',
-		ease:'easeOut',
-		effect:'v-slide',
-		autoSlide:true,
-		timeout:3000,
-		speed:0.5,
-		hoverStop:true
-	});
-});
-</script>
 </html>
