--- a/demo/test.html
+++ b/demo/test.html
@@ -73,7 +73,7 @@ body {
 	YUI({
 		modules:{
 			'slide':{
-				fullpath:'slide.js',
+				fullpath:'../slide.js',
 				requires:['node','anim']
 			}
 		}
