--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 				<li><a href="demo/tb-carousel.html">carsousel DEMO</a></li>
 				<li><a href="demo/le.taobao.com.html">le.taobao.com DEMO</a></li>
 				<li><a href="demo/mojo-slide.html">mojo DEMO</a></li>
+				<li><a href="demo/test.html">Mobile touch DEMO</a></li>
 				<li><a href="http://taobao-wd.github.com/lazy-mojo/demo.html">lazyload Demo</a></li>
 			</ul>
 		</div>
