--- a/index.html
+++ b/index.html
@@ -428,6 +428,40 @@ var slide = new Y.Slide('J_tab',{
 				<!--}}-->
 
 
+
+
+				<!--{{-->
+				<div class="expand">
+					<h4>hightlightNav</h4>
+					<p>根据传入的索引值高亮特定的导航项</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
+					<h4>is_first</h4>
+					<p>是否是第一帧</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
+					<h4>is_last</h4>
+					<p>是否是最后一帧</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
+					<h4>resetSlideSize</h4>
+					<p>可以传入一个索引值为参数，重置第index个Slide的宽度和高度</p>
+				</div>
+				<!--}}-->
+				<!--{{-->
+				<div class="expand">
+					<h4>relocateCurrentTab</h4>
+					<p>无参数，重新修正当前帧的位置</p>
+				</div>
+				<!--}}-->
+
+
 				<h2>实例的事件</h2>
 				<!--{{-->
 				<div class="expand">
